# makerspace-modbus-mqtt-bridge

./: Cargo.toml  README.md  config.toml
.github/workflows/: ci.yml
src/: config.rs  main.rs  modbus.rs  mqtt.rs  sensors.rs
